# nutrition-app-full

./: .gitignore  README.md  init_db.py  main.py  package-lock.json  pyproject.toml  test_chroma_minimal.py  test_embeddings_usage.py  test_guideline_loader.py  test_json_output.py  test_local_pipeline.py  test_local_rag.py  test_recommendation.py
app/: main.py
backend/: .dockerignore  .gitignore  Dockerfile  ENHANCED_EMBEDDING_SYSTEM.md  ENHANCED_RESPONSE_GUIDE.md  Makefile  ex  import_products_from_txt.py  products_input_template.txt  pyproject.toml  requirements.txt  test_duplicate_issue.py  test_integrated_pipeline.py  test_layer1_layer2_pipeline.py  test_layer2_macro_optimization.py  test_original_query.py  test_randomization.py  test_vector_search.py  update_sample_products.py
backend/adding_products/: README_PRODUCT_WORKFLOW.md  import_products.py  products_input_template.txt  rebuild_product_vectorstore.py  setup_database.py
backend/app/: main.py
backend/app/core/: embedding.py  enhanced_embedding.py  genai.py  global_embeddings.py  layer2_macro_optimization.py  macro_targeting.py  macro_targeting_local.py  optimized_chroma.py  recommendation.py
backend/app/db/: models.py  session.py  vector_store.py
backend/app/schemas/: macro_target.py  product.py  recommendation.py
backend/data/: products_and_kds.db
backend/data/product_vector_store/: chroma.sqlite3
backend/data/rag_store/: chroma.sqlite3
backend/examples/: enhanced_response_example.py  test_enhanced_embedding.py  test_hard_filtering.py  test_integrated_enhanced_embedding.py  test_llm_macro_targeting.py
backend/nutrition_guidelines/age12-18/: cardio_long_session_12-18.md  cardio_short_session_12-18.md  strength_long_session_12-18.md  strength_short_session_12-18.md
backend/nutrition_guidelines/age19-59/: cardio_long_session_19-59.md  cardio_short_session_19-59.md  strength_long_session_19-59.md  strength_short_session_19-59.md
backend/nutrition_guidelines/age6-11/: cardio_long_session_6-11.md  cardio_short_session_6-11.md  strength_long_session_6-11.md  strength_short_session_6-11.md
backend/tests/: README.md  conftest.py  pytest.ini
backend/tests/integration/: test_branching_pipeline.py  test_enhanced_response.py  test_integrated_pipeline.py  (+8 more)
(+76 files in other folders)
